# narrtest

./: .gitattributes  CONTRIBUTING.md  README.md  analyze.txt  pubspec.yaml
..bfg-report/2026-06-06/02-03-56/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
..bfg-report/2026-06-06/02-03-56/protected-dirt/: 75f2c6fa-HEAD.csv
.github/workflows/: ci.yml
android/: build.gradle  build_log.txt  gradle.properties
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  narrator_ncnn.cpp  narrator_vlm_jni.cpp  whisper_mel.cpp
android/app/src/main/kotlin/com/narrator/: MainActivity.kt  NarratorPlugin.kt  VlmBridge.kt  WakeWordManager.kt
android/app/src/main/kotlin/com/narrator/narrator/: MainActivity.kt
assets/models/: decoder_model.onnx  decoder_with_past_model.onnx  whisper_vocab.json
lib/: app.dart  main.dart
lib/core/: constants.dart  dpdp_consent.dart  model_manager.dart
lib/pipelines/pipeline1/: obstacle_detector.dart  safety_coordinator.dart  yolo_ncnn_runner.dart
lib/pipelines/pipeline2/: conversation_coordinator.dart  frame_selector.dart  llama_server_runner.dart  silero_vad.dart  streaming_tts.dart  stt_manager.dart  translation_engine.dart  vlm_runner.dart  wake_word_engine.dart
lib/screens/: home_screen.dart  privacy_dashboard_screen.dart  settings_screen.dart
lib/screens/onboarding/: model_download_screen.dart  privacy_consent_screen.dart  splash_screen.dart
lib/services/: connectivity_service.dart  haptic_service.dart  language_service.dart  tts_service.dart
lib/widgets/: camera_overlay.dart  pipeline_status_badge.dart  response_bubble.dart
test/: widget_test.dart
test/unit/: constants_test.dart  dpdp_consent_test.dart  frame_selector_test.dart  language_service_test.dart  obstacle_detector_test.dart  stt_manager_test.dart
whisper_tiny_merged/: config.json
whisper_tiny_onnx/: config.json  decoder_model.onnx  encoder_model.onnx  generation_config.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
